--- a/spotlight-config/output/site-activity-hm-treasury.json
+++ b/spotlight-config/output/site-activity-hm-treasury.json
@@ -1,12 +1,11 @@
 {
   "slug": "site-activity-hm-treasury",
   "page-type": "dashboard",
-  "dashboard-type": "other",
+  "dashboard-type": "content",
+  "published": true,
   "strapline": "Content dashboard",
   "title": "HM Treasury (HMT)",
-  "other": {
-    "tagline": "Web performance data for HM Treasury. including site traffic and availability. <a href=\"http://www.gov.uk/performance/site-activity\">View site activity for all GOV.UK pages</a>."
-  },
+  "tagline": "Web performance data for HM Treasury. Including site traffic and availability. <a href=\"http://www.gov.uk/performance/site-activity\">View site activity for all GOV.UK pages</a>.",
   "relatedPages": {
     "transaction": {
       "title": "HM Treasury",
@@ -588,6 +587,7 @@
         "A count of anonymous comments made on departmental pages in a calendar month.",
         "A department’s content is defined as the pages that a department publishes. Only includes the content in the Departments and policy section and may be based on sampled data."
       ],
+      "default-value": 0,
       "denominator-matcher": "hmt",
       "numerator-matcher": "hmt",
       "matching-attribute": "organisation_acronym",
