--- a/spotlight-config/output/site-activity-hm-treasury.json
+++ b/spotlight-config/output/site-activity-hm-treasury.json
@@ -5,7 +5,7 @@
   "published": true,
   "strapline": "Content dashboard",
   "title": "HM Treasury (HMT)",
-  "tagline": "Web performance data for HM Treasury. Including site traffic and availability. <a href=\"http://www.gov.uk/performance/site-activity\">View site activity for all GOV.UK pages</a>.",
+  "tagline": "Web performance data for HM Treasury. <a href=\"http://www.gov.uk/performance/site-activity\">View site activity for all GOV.UK pages</a>.",
   "relatedPages": {
     "transaction": {
       "title": "HM Treasury",
